Deployment-gld.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-gold-deployment
spec:
  minReadySeconds: 6
  replicas: 4
  selector:
    matchLabels:
      app: gold
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: gold
    spec:
      containers:
        - name: my-container-gold
          image: 239500134360.dkr.ecr.ap-south-1.amazonaws.com/k8s/ingress:gld
          imagePullPolicy: Always
          ports:
            - containerPort: 80
